# CFetch

./: .gitignore  CMakeLists.txt  main.c  readme.md
fetch/include/: Fetch.h  GlobalLibs.h
fetch/src/: Fetch.c
test/: package.json  test.js
